<resources>
    <string name="app_name">AstraPosts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="astra_tech">ASTRA <font color="#3f95ec">TECH</font></string>
    <string name="add_Post">Add Post</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="publish_text">Publish</string>
    <string name="update_string">Update</string>
    <string name="content_description">content_description</string>
    <string name="edit_content_description">Edit Post Button</string>
    <string name="delete_content_description">Delete Post Button</string>
    <string name="update_post">Update Post</string>
</resources>