<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".detailFragment.DetailPostFragment"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="270dp">

                <ImageView
                    android:id="@+id/post_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_description" />

                <ImageView
                    android:id="@+id/detail_backBtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/content_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/darkBlue"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/post_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_btn_bg"
            app:layout_constraintBottom_toTopOf="@id/delete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/edit_content_description" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_delete"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/blue_btn_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/delete_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>