<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addPostFragment.AddPostFragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/addPost_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_Post"
                android:textSize="24sp"
                android:textColor="@color/darkBlue"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/add_post_pic"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/circle_bg"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/addPicBtn"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_pic"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="@id/add_post_pic"
                        app:layout_constraintStart_toEndOf="@id/add_post_pic"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/title"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/message_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/message_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/message"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/publish_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/publish_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_publish_bg"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>